--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Exposicion: Memorias de Kennedy</title>
 </head>
 <body>
-    <h1>Pagina en construcción</h1>
+    <h1>Página en construcción</h1>
     <p>Estará disponible proximamente :D</p>
 </body>
 </html>
