--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           </video>
           <div class="play-now">
             <a
-              href="video.html"
+              href="https://julieib03.itch.io/memorias-de-kennedy-la-arquitectura-como-testigo-silencioso"
               class="play-btn"
             ></a>
             <svg
