--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     />
     <meta name="theme-color" content="#feed01" />
     <title>
-      Memorias de Kennedy | La Arquitectura como testigo silencioso.
+      Memorias de Kennedy: La Arquitectura como testigo silencioso.
     </title>
 
     <!-- CSS FILES -->
