--- a/index.html
+++ b/index.html
@@ -62,12 +62,22 @@
             </a>
           </div>
           <!-- end logo -->
+          <div class="botones">
+            <div class="navbar-button">
+            <a
+              href="https://julieib03.itch.io/proyecto-final-memorias-de-kennedy"
+              target="_blank"
+              style="background-color: #88292F;"
+              >Comenzar</a
+            >
+          </div>
           <div class="navbar-button">
             <a
               href="https://forms.office.com/Pages/ResponsePage.aspx?id=qNNG1hV7U0udkpgV_WJwLBNGoLM1jGpPi92y3CSr6dBURUg2SlBWNzBGT1ZOOE5BQ001NDIzQzVQSy4u"
               target="_blank"
               >Evalúanos</a
             >
+          </div>
           </div>
 
           <!-- end navbar-button -->
